# nexus-arc

./: .gitignore  AGENTIC-AWESOME-SKILLS-GUIDE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  fix_names.py  post_completion.py  pyproject.toml
examples/nexus-bot/: .env.example  Dockerfile  INSTALL.md  README.md  docker-compose.yml  install.py  install.sh  nexus-bot.service  nexus-bridge.service  nexus-discord.service  nexus-health.service  nexus-processor.service  nexus-telegram.service  nexus-webhook.service  pyproject.toml
examples/nexus-bot/config/: project_config.yaml
examples/nexus-bot/docs/: AGENTS.md  architecture.md  config-reference.md  framework-integration.md  workflow-lifecycle.md
examples/nexus-bot/scripts/: deploy.sh  setup-webhook.sh
examples/nexus-bot/src/: alerting.py  audit_store.py  config.py  dependencies.py  discord_bot.py  health_check.py  inbox_processor.py  interactive_agent.py  interactive_utils.py  telegram_bot.py  webhook_server.py
examples/nexus-bot/tests/: test_agent_context_utils.py  test_agent_launcher_exclusions.py  test_agent_launcher_notifications.py  test_agent_monitor.py  test_agent_resolution_handler.py  test_ai_orchestrator.py  test_analytics.py  test_archive_closed_tasks.py  test_auth_byok_extensions.py  test_broadcasting_store.py  test_builtin_github_issue_plugin_usage.py  test_builtin_gitlab_issue_plugin_usage.py  test_callback_inline_service.py  test_callback_menu_service.py  test_callback_registry_service.py  test_command_contract.py  test_command_router.py  (+73 more)
(+326 files in other folders)
